# celltype_hierarchy

./: LICENSE  README.md  analysis_tree_helpers.py  celltype_hierarchy.ipynb  cophenetic_distance.ipynb  dend_json_to_df.py  examples.ipynb  pyproject.toml  readme.md  tree_20180520.csv
ctree/: analysis_tree_helpers.py  dend_json_to_df.py  utils.py
data/: tree_20180520.csv
notebooks/: 01_merged_subtree.ipynb  02_cophenetic_distance.ipynb  03_wasserstein_distance.ipynb
